--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
         @import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
 
         * {
-            font-family: 'Gowun Dodum', sans-serif
+            font-family: 'Gowun Dodum', sans-serif;
         }
 
         .mytitle {
             background-color: green;
             color: white;
+
             height: 250px;
 
             display: flex;
@@ -30,7 +31,7 @@
             align-items: center;
             justify-content: center;
 
-            background-image: url('https://movie-phinf.pstatic.net/20210715_95/1626338192428gTnJl_JPEG/movie_image.jpg');
+            background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://movie-phinf.pstatic.net/20210715_95/1626338192428gTnJl_JPEG/movie_image.jpg');
             background-position: center;
             background-size: cover;
         }
@@ -43,7 +44,9 @@
 
             border: 1px solid white;
             color: white;
+
             border-radius: 50px;
+
             margin-top: 20px;
         }
 
@@ -52,119 +55,128 @@
         }
 
         .mycomment {
-            color: grey;
+            color: gray;
         }
 
         .mycards {
             width: 1200px;
             margin: 20px auto 20px auto;
         }
+
         .mypost {
             width: 500px;
             margin: 20px auto 20px auto;
             padding: 20px 20px 20px 20px;
-            box-shadow: 0px 0px 3px 0px;
+
+            box-shadow: 0px 0px 3px 0px gray;
         }
+
         .mybtn {
             display: flex;
             flex-direction: row;
             align-items: center;
             justify-content: center;
+
             margin-top: 20px;
-            
         }
+
         .mybtn>button {
             margin-right: 10px;
         }
     </style>
+    <script>
+        $(document).ready(function () {
+            fetch("http://spartacodingclub.shop/sparta_api/weather/seoul").then(res => res.json()).then(data => {
+                let number = data['temp']
+                $('#temp').text(number)
+            })
+        })
+    </script>
 </head>
 
 <body>
     <div class="mytitle">
         <h1>내 생애 최고의 영화들</h1>
+        <div>현재 서울의 날씨 : <span id="temp">20</span>도</div>
         <button>영화 기록하기</button>
     </div>
     <div class="mypost">
         <div class="form-floating mb-3">
             <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">영화 url</label>
+            <label for="floatingInput">영화URL</label>
         </div>
         <div class="input-group mb-3">
             <label class="input-group-text" for="inputGroupSelect01">별점</label>
             <select class="form-select" id="inputGroupSelect01">
-              <option selected>--선택하기--</option>
-              <option value="1">⭐</option>
-              <option value="2">⭐⭐</option>
-              <option value="3">⭐⭐⭐</option>
+                <option selected>-- 선택하기 --</option>
+                <option value="1">⭐</option>
+                <option value="2">⭐⭐</option>
+                <option value="3">⭐⭐⭐</option>
+                <option value="4">⭐⭐⭐⭐</option>
+                <option value="5">⭐⭐⭐⭐⭐</option>
             </select>
-          </div>
+        </div>
         <div class="form-floating">
             <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
             <label for="floatingTextarea">코멘트</label>
         </div>
         <div class="mybtn">
-            
-<button type="button" class="btn btn-dark">기록하기</button>
-<button type="button" class="btn btn-outline-dark">닫기</button>
+            <button type="button" class="btn btn-dark">기록하기</button>
+            <button type="button" class="btn btn-outline-dark">닫기</button>
         </div>
     </div>
     <div class="mycards">
         <div class="row row-cols-1 row-cols-md-4 g-4">
             <div class="col">
-                <div class="card">
+                <div class="card h-100">
                     <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
-                        class="card-img-top"
-                        alt="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg">
+                        class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">영화 제목</h5>
-                        <p class="card-text">여기에 코멘트가 들어갑니당</p>
+                        <h5 class="card-title">영화 제목이 들어갑니다.</h5>
+                        <p class="card-text">여기에 코멘트가 들어갑니다.</p>
                         <p>⭐⭐⭐</p>
-                        <p class="mycomment">나는 히어로물은 별로...</p>
+                        <p class="mycomment">여기에 나의 의견을 쓰면 되겠죠</p>
                     </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card">
+                <div class="card h-100">
                     <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
-                        class="card-img-top"
-                        alt="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg">
+                        class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">영화 제목</h5>
-                        <p class="card-text">여기에 코멘트가 들어갑니당</p>
+                        <h5 class="card-title">영화 제목이 들어갑니다.</h5>
+                        <p class="card-text">여기에 코멘트가 들어갑니다.</p>
                         <p>⭐⭐⭐</p>
-                        <p class="mycomment">나는 히어로물은 별로...</p>
+                        <p class="mycomment">여기에 나의 의견을 쓰면 되겠죠</p>
                     </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card">
+                <div class="card h-100">
                     <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
-                        class="card-img-top"
-                        alt="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg">
+                        class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">영화 제목</h5>
-                        <p class="card-text">여기에 코멘트가 들어갑니당</p>
+                        <h5 class="card-title">영화 제목이 들어갑니다.</h5>
+                        <p class="card-text">여기에 코멘트가 들어갑니다.</p>
                         <p>⭐⭐⭐</p>
-                        <p class="mycomment">나는 히어로물은 별로...</p>
+                        <p class="mycomment">여기에 나의 의견을 쓰면 되겠죠</p>
                     </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card">
+                <div class="card h-100">
                     <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
-                        class="card-img-top"
-                        alt="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg">
+                        class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">영화 제목</h5>
-                        <p class="card-text">여기에 코멘트가 들어갑니당</p>
+                        <h5 class="card-title">영화 제목이 들어갑니다.</h5>
+                        <p class="card-text">여기에 코멘트가 들어갑니다.</p>
                         <p>⭐⭐⭐</p>
-                        <p class="mycomment">나는 히어로물은 별로...</p>
+                        <p class="mycomment">여기에 나의 의견을 쓰면 되겠죠</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
 </body>
 
 </html>
